syntax = "proto3";

package stredono;

option go_package="github.com/pkulik0/stredono/cloud/pb";

enum Currency {
  UNKNOWN = 0;
  BITS = 1;
  PLN = 2;
}

enum TipStatus {
  INITIATED = 0;
  PAYMENT_PENDING = 1;
  PAYMENT_SUCCESS = 2;
}

message Tip {
  string SenderId = 1;
  string DisplayName = 2;
  string Email = 3;
  string Message = 4;
  double Amount = 5;
  Currency Currency = 6;
  string RecipientId = 7;
  TipStatus Status = 8;
  int64 Timestamp = 9;
}

message User {
  string Username = 1;
  string DisplayName = 2;
  string Uid = 3;
  string Url = 4;
  string Description = 5;
  string PictureUrl = 6;

  double MinimumAmount = 7;
  Currency Currency = 8;
}

enum AlertType {
  DONATE = 0;
  FOLLOW = 1;
  SUBSCRIBE = 2;
  SUBGIFT = 3;
  RAID = 4;
}

enum TextToSpeechService {
  GOOGLE = 0;
  ELEVENLABS = 1;
}

message TextToSpeechSettings {
  TextToSpeechService Service = 1;
  string Voice = 2;
  string Language = 3;
}

message AmountTrigger {
  double Min = 1;
  double Max = 2;
}

message Alert {
  string Id = 1;
  AlertType Type = 2;
  AmountTrigger AmountTrigger = 3;

  string Template = 4;

  AlertStyle Style = 5;
  TextToSpeechSettings TtsSettings = 6;
}

enum AnimationType {
  SHAKE = 0;
  BOUNCE = 1;
}

message AlertStyle {
  string GifUrl = 1;
  string SoundUrl = 2;

  AnimationType Animation = 3;

  string TextColor = 4;
  string AccentColor = 5;
}

message Event {
  repeated string Users = 1;
  repeated double Amounts = 2;
  string Currency = 3;
  string Message = 4;
}

message Token {
  string Access = 1;
  string Refresh = 2;
}

message TwitchReward {
  string Id = 1;
  string Name = 2;
  int64 Cost = 3;
  bool IsEnabled = 4;
}

message TwitchUser {
  string Id = 1;
  string DisplayName = 2;
  string Login = 3;
  string AvatarUrl = 4;
  string Description = 5;
  int64 CreationTimestamp = 6;
}